pictures displaying. set css for images to block

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/module.css">
   <title>Document</title>
 </head>
 <body>
@@ -15,7 +18,9 @@
     </nav>
   </header>
   <main>
-    
+    <section>
+      <div class="container"></div>
+    </section>
   </main>
   <footer></footer>
   <script src="js/app.js"></script>
