update: form and selector added to index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     </nav>
   </header>
   <main>
+      <form id = "filter-form">
+          Filter: <input type="text" name = "filter">
+          <input type="submit">
+      </form>
+      <select name = "filter-selector" form="filter-form"><option value="rhino"></option> </select>
     <section>
       <div class="container"></div>
     </section>
