select option logic completed

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
   </header>
   <main>
       <form id = "filter-form">
-          Filter: <input type="text" name = "filter">
+          <label for="filter-selector">Filter for: </label>
+          <select name = "filter-selector" form="filter-form" id="keywords">
+          </select>
           <input type="submit">
       </form>
-      <select name = "filter-selector" form="filter-form"><option value="rhino"></option> </select>
     <section>
       <div class="container"></div>
     </section>
