added submit handler functionality

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
           </select>
           <input type="submit">
       </form>
+      <form id = "showAll">
+        <input type="submit" value="Show All">
+      </form>
     <section>
       <div class="container"></div>
     </section>
