--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/module.css">
-  <title>Document</title>
+  <title>Pictures</title>
 </head>
 <body>
   <header>
     <nav>
       <a href="index.html">Home</a>
-      <a href="#">Login</a>
+      <a href="404.html">Login</a>
     </nav>
   </header>
   <main>
